fixed low contrast issue

--- a/styles/form.css
+++ b/styles/form.css
@@ -105,7 +105,7 @@ textarea {
 }
 
 .wf1 span {
-    color: blue;
+    color: rgb(68, 9, 68);
     font-size: small;
 }
 
